spacing fix, able to press enter to perform action in modal

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<template id="equation">
 		<tr>
 			<!-- The first class in the button MUST be an icon, as it gets changed in code -->
-			<td><button id="equation-button" class="bi-graph-up bi nohover btn fs-3 px-1"></button></td>
+			<td><button id="equation-button" class="bi-graph-up bi nohover btn fs-3 ps-1 pe-0"></button></td>
 			<td class="w-100">
-				<textarea id="equation-content" rows="2" type="text" class="form-control px-0" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
+				<textarea id="equation-content" rows="2" type="text" class="form-control" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
 			</td>
-			<td class="w-auto"><button title="Delete Equation" id="equation-delete" class="nohover btn text-danger bi bi-x-lg fs-5 px-1"></button></td>
+			<td class="w-auto"><button title="Delete Equation" id="equation-delete" class="nohover btn text-danger bi bi-x-lg fs-5 ps-0 pe-1"></button></td>
 		</tr>
 	</template>
 	
