--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 					<button title="Reset Viewport" onclick="display.resetCamera()" class="bi bi-house btn text-info nohover fs-3 ps-1" style="float: right;"></button>
 					<button title="Make Aspect Ratio 1:1" onclick="display.camera.fixAspectRatio()" class="bi bi-aspect-ratio btn text-info nohover fs-3 px-1" style="float: right;"></button>
 					<button id="toggle-isolines" title="Toggle Isolines" onclick="toggleIsolines()" class="bi bi-radar btn text-light nohover fs-3 px-1" style="float: right;"></button>
-					<button title="Randomize Seed" onclick="renderer.randomizeSeed()" class="bi bi-dice-6 btn nohover fs-3 px-1" style="float: right; color: #a45ae5"></button>
+					<button id="toggle-grid" title="Toggle Grid" onclick="toggleGrid()" class="bi bi-border-all btn text-light nohover fs-3 px-1" style="float: right;"></button>
 					<button title="Reset Time" onclick="renderer.resetTime()" class="bi bi-clock-history btn nohover fs-3 px-1" style="float: right; color: #a45ae5"></button>
-					<button title="Settings (NON-FUNCTIONAL)" onclick="console.log('open settings')" data-bs-toggle="modal" data-bs-target="#settings-modal" class="bi bi-gear btn text-success-emphasis nohover fs-3 px-1" style="float: right;"></button>
+					<button title="Randomize Seed" onclick="renderer.randomizeSeed()" class="bi bi-dice-6 btn nohover fs-3 px-1" style="float: right; color: #a45ae5"></button>
 					<a title="Documentation and GitHub Page" href="https://github.com/AirborneDetergent/Graffey#graffey" target="_blank" class="bi bi-question-lg btn nohover fs-3 px-0" style="float: right; color: #FF8800;"></a>
 				</div>
 				<div id="equation-container" class="border-end d-flex flex-column">
